<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

		<TextView
			android:id="@+id/createfile_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Welcome to Password Crypt.  Please set your master password."
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_marginBottom="10dp"/>

		<TextView
			android:id="@+id/createfile_subtitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Note that if you forget this password there is no way to recover the data stored in this application."
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_marginBottom="10dp"/>

		<EditText
			android:id="@+id/createfile_oldpasswordipt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:visibility="gone"
			android:hint="current password"
			android:inputType="textPassword"
			android:maxLines="1" >
			<requestFocus />
		</EditText>
	
	    <EditText
	        android:id="@+id/createfile_password1ipt"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="password"
	        android:inputType="textPassword"
	        android:maxLines="1" >
			<requestFocus />
		</EditText>

		<EditText
            android:id="@+id/createfile_password2ipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="re-enter password"
            android:inputType="textPassword"
            android:maxLines="1"  />

	</LinearLayout>

	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true">

		<Button
            android:id="@+id/createfile_okaybtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:text="Okay"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true" />

	</RelativeLayout>

</RelativeLayout>
